--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "fmt": "deno fmt ./src",
     "lint": "deno lint --unstable ./src",
     "build": "tsc",
-    "test": "jest --testLocationInResults test/",
+    "test": "jest src/",
+    "test:example": "jest example/",
     "prepublishOnly": "yarn tsc"
   },
   "license": "MIT",
@@ -31,12 +32,14 @@
     "strip-ansi": "6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node-fetch": "^2.5.11",
     "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.2.3"
   },
   "jest": {
-    "testLocationInResults": true,
+    "preset": "ts-jest",
     "reporters": [
       "default",
       "./dist/index.js"
